# MergeShot

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: DEVELOPER.md  FFMPEG_LICENSE.md
scripts/: download-ffmpeg.ps1  download-ffmpeg.sh
src/: App.css  App.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src/components/: ActionBar.tsx  DropZone.tsx  LogDrawer.tsx  SessionDetails.tsx  SessionItem.tsx  SessionList.tsx
src/utils/: formatters.ts  grouper.ts
