[package]
name = "mergeshot"
version = "0.1.0"
description = "Fast lossless merging for split camera recordings."
authors = ["MergeShot Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/mergeshot"
edition = "2021"

[lib]
name = "mergeshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[features]
# This feature is used for production builds or when a dev server is not specified.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
strip = true
